mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/rpll: "true"
        io.kompose.service: mariadb
    spec:
      containers:
        - env:
            - name: MYSQL_PASSWORD
              value: vagrant
            - name: MYSQL_ROOT_PASSWORD
              value: vagrant
            - name: MYSQL_USER
              value: root
            - name: TZ
              value: Europe/Amsterdam
          image: mariadb
          name: mariadb
          resources: {}
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: mariadb-claim0
            - mountPath: /var/lib/mysql
              name: rpll-mariadb
      restartPolicy: Always
      volumes:
        - name: mariadb-claim0
          persistentVolumeClaim:
            claimName: mariadb-claim0
        - name: rpll-mariadb
          persistentVolumeClaim:
            claimName: rpll-mariadb
status: {}
