webclient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: webclient
  name: webclient
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webclient
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/rpll: "true"
        io.kompose.service: webclient
    spec:
      containers:
        - image: webclient
          name: webclient
          resources: {}
      restartPolicy: Always
status: {}
