reverse-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: reverse-proxy
  name: reverse-proxy
spec:
  ports:
    - name: "1234"
      port: 1234
      targetPort: 80
  selector:
    io.kompose.service: reverse-proxy
status:
  loadBalancer: {}
